--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "php-flasher/flasher-laravel": "^1.13",
         "qirolab/laravel-reactions": "^2.7",
         "spatie/laravel-medialibrary": "^10.7",
+        "symfony/http-client": "^6.2",
+        "symfony/mailgun-mailer": "^6.2",
         "wisdom-diala/countrypkg-laravel": "^1.0"
     },
     "require-dev": {
